--- a/SkwiuFarms.html
+++ b/SkwiuFarms.html
@@ -1,33 +1,44 @@
 <!DOCTYPE html>
+
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.css" />
-	<link rel="stylesheet" href="SkwiuFarms.css">
+	<link rel="stylesheet" href="css/Skwiufarms.css" />
+
+	<link rel="stylesheet" href="css/style-xlarge.css" />
 	<script src="http://code.jquery.com/jquery-2.0.3.min.js"></script>
 	<script src="http://code.jquery.com/mobile/1.4.4/jquery.mobile-1.4.4.min.js"></script>
 <meta charset="ISO-8859-1">
-<title>Skwiu Farm</title>
+<title>SkwiuFarms</title>
 </head>
 <body>
-	<h1 id="heading-1" class="ui-bar ui-bar-a ui-corner-all">Skwiu Farms</h3>
-	<div class="ui-body ui-body-a ui-corner-all"> <a href="www.google.com">text</a>
+	<h1 id="top" class="body"><center>Welcome to SkwiuFarms!</center></h3>
 	
-	<div data-role="tabs" id="tabs-1">
-	<div data-role="navbar">
-		<ul>
-			<li><a href="#tab-1a" data-ajax="false">About us</a></li>
-			<li><a href="#tab-1b" data-ajax="false">Contact us</a></li>
-		</ul>
-	</div>
-	<div id="tab-1a" class="ui-body-d ui-content">
-		<h4>About us</h4>
-	</div>
+	<div> 
+			<p><i> "Just imagine if we all lived with no compassion, thinking only of ourselves.
+			 We would suffer greatly.  The more you think of others, the happier you are."</i> - Dalai Lama</p>
+		
 </div>
-		<p> "" Just imagine if we all lived with no compassion, thinking only of ourselves.  We would suffer greatly.  The more you think of others, the happier you are." Dalai Lama</p>"
-		<p>    Skwiu Farms is a future non profit 501(c)3 organization focused on enriching local communities near to the piedmont and mountainside of North Carolina through the creation of local cooperative markets based in high quality, free-range poultry, and organically produce grown locally in the nearby area.  Skwiu Farms strictly adheres to a no synthetics 
-in the garden policy, a non GMO policy, and we also focus on bringing foods of the native, indigenous Americans to the people in communities adjacent to our projects.  Skwiu Farms implements a hands on philosophy for education and outreach, bringing the best of locally grown exotics and natives for a bio-diverse diet from our welcoming community.
-<a href="http://permacultureprinciples.com/ethics/"><img src="http://upload.wikimedia.org/wikipedia/commons/2/27/Forgard2-003.gif"></a></p>
+	<div>
+		<h4><center><strong><font size=5>About SkwiuFarms</font></strong></center></h4>
+		<p>
+			<element>
+				Skwiu Farms is a future non profit 501(c)3 organization
+				focused on enriching local communities near to the
+				Piedmont and Mountainside of North Carolina through the
+				creation of local cooperative markets based in high
+				quality, free-range poultry, and organically produce
+				grown locally in the nearby area. Skwiu Farms strictly
+				adheres to a no synthetics in the garden policy, a non
+				GMO policy, and we also focus on bringing foods of the
+				native, indigenous Americans to the people in
+				communities adjacent to our projects. Skwiu Farms
+				implements a hands on philosophy for education and
+				outreach, bringing the best of locally grown exotics and
+				natives for a bio-diverse diet from our welcoming
+				community.
+			</element>
 
 <p>    Skwiu Farms consists of many people from Permaculture designers, artists, jack of all trade types, apprentices, and scientists.  Our unifying force originates in
 our shared common interest, which is the common interest to all people; That is, to have flourishing, and abundant food growing nearby to ensure our healthfulness and
@@ -45,25 +56,31 @@ need only the capability to cross platform the links from our Google Drive onto 
 Internet of our inventory, growing and in seed, as well as notes about the growing progress, any pitfalls, and easy growing species that should be noted, with progress
 on the account of restoration of endangered species' populations.</p>
 	</div>
+		</div>
 	
-		<div id="tab-1b" class="ui-body-d ui-content">
-		<h4>Contact us</h4>
-		<p> For information on how to join our project, or for any questions, please contact us by e-mail at <a href="mailto:skwiufarms@gmail.com"> SKWIUfarms@gmail.com</a><br>. 
-		To find out more information about our project, including the ability to search through out data of events, inventory, and to request plant cultivation, find the appropriate link below:
-		<disc>	<a href="https://drive.google.com/open?id=1KOzPFwx8oQZfw0Kx1TwTe8XipCZAbyT-msp8sj6w1uU0">For suggesting native plants for cultivation or protection.</a><br>
+		<div>
+		<h4><center><strong><font size=5>Contact us</font></strong></center></h4>
+		<p> For information on how to join our project, or for any questions, please contact us by e-mail at <a href="mailto:skwiufarms@gmail.com"> SKWIUfarms@gmail.com</a>. 
+		To find out more information about our project, including the ability to search through out data of events, inventory, and to request plant cultivation, 
+		please find the appropriate link below: <br>
+		<br>
+		<disc>	
+		<a href="https://drive.google.com/open?id=1KOzPFwx8oQZfw0Kx1TwTe8XipCZAbyT-msp8sj6w1uU0">For suggesting native plants for cultivation or protection.</a><br>
 		<a href="https://drive.google.com/open?id=12Yc19dBavKTg1OnufR9aUz6ySI8b_SAs2J1Iv-t5ghg">For suggesting exotic plants for cultivation or protection.</a><br>
 		<a href="https://drive.google.com/open?id=12Yc19dBavKTg1OnufR9aUz6ySI8b_SAs2J1Iv-t5ghg">For suggesting animals to integrate into the system.</a><br>
 		<a href="https://drive.google.com/open?id=12Yc19dBavKTg1OnufR9aUz6ySI8b_SAs2J1Iv-t5ghg">For the temporary log of suggested growing species.</a><br>
 		<a href="https://drive.google.com/open?id=12Yc19dBavKTg1OnufR9aUz6ySI8b_SAs2J1Iv-t5ghg">For the log of suggested animals and the numbers of existing animals on site.</a><br>
 		<a href="https://drive.google.com/open?id=1-OnKMOjQkIHPbBYi2q9s2SlWZBR-9mppzFwoTk3s6Q8">For a look at our rough draft mission statement, goals, and foundation.</a><br></disc></p>
 	</div>
-		<h4>Links</h4>
+		<h4>Special Thanks</h4>
 		<p> Without the Internet, and the pioneers of scientific advancement, SKWIU farms would not ever be able to exist.  We believe that all information should be shared,
 		and we thank those whom we have learned from, whether it be through a personal relationship, books, or other documentation of existing and historical projects within
 		ecological restoration, permaculture, agriculture, forestry, and all related facets of natural exploration for human and environmental benefit.<br>
 		<br>
 		We thank and support the following websites, people, and organizations for helping originate our articulation of our goals, our understandings of nature, and for solidarity:<br>
-		<square> <a href="http://permacultureprinciples.com/">Permaculture Principles</a><br>
+		<br>
+		<square> 
+			<a href="http://permacultureprinciples.com/">Permaculture Principles</a><br>
 			<a href="http://www.permaculture.org/">The Permaculture Institute</a><br>
 			<a href="http://tagari.com/">Tagari, by Bill Mollison</a><br>
 			<a href="http://richsoil.com/">Permaculture Articles, by Paul Wheaton</a><br>
