--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-	<font color="blue">
+	<font color="lime">
 		<title>Michael Scray</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
@@ -24,13 +24,12 @@
 		<!--[if lte IE 8]><link rel="stylesheet" href="css/ie/v8.css" /><![endif]-->
 	</head>
 	<body id="top">
-		<image src = "../images/GeorgiaState.jpg" class="body">
 
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/MichaelScray.jpg" alt="" /></a>
 				<h1><strong>Michael Scray</strong><br />
-				<br>mscray1@student.gsu.edu<br />
+				<br><a href="mailto:mscray1@student.gsu.edu">mscray1@student.gsu.edu </a><br>
 				<br>(678)939-6486 <br/>
 				</h1>
 			</header>
@@ -40,10 +39,10 @@
 				<!-- One -->
 					<section id="one">
 						<header class="major">
-							<h2><font color="blue">Student at<br />
+							<h2><font color="lime">Student at<br />
 							Georgia State University.</font></h2>
 						</header>
-						<font color="blue">
+						<font color="lime">
 						<p>Expected graduation date in Fall 2015.</p>
 						</font>
 						<ul class="actions">
@@ -54,7 +53,7 @@
 				<!-- Two -->
 					<section id="two">
 					<!-- Current log size is 1000 x 177!!!!! -->
-						<h2><font color="black">Recent Work</font></h2>
+						<h2><font color="orange">Recent Work</font></h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
 								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/SFlogo.jpg" alt="SkwiuFarms" /></a>
@@ -68,13 +67,13 @@
 							</article>
 						</div>
 						<ul class="actions">
-							<li><a href="#" class="button">Full Portfolio</a></li>
+							<li><a href="https://www.linkedin.com/pub/michael-scray/62/291/188" class="button">Full Portfolio</a></li>
 						</ul>
 					</section>
 
 				<!-- Three -->
 					<section id="three">
-						<h2><font color="black">Get In Touch</font></h2>
+						<h2><font color="orange">Get In Touch</font></h2>
 						<p>If you would like to know more than what is listed, please feel free to contact me!</p>
 						<div class="row">
 							<div class="8u 12u$(small)">
@@ -103,7 +102,7 @@
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mail.google.com">mscray9212@gmail.com</a>
+										<a href="mailto:mscray9212@gmail.com">mscray9212@gmail.com</a>
 									</li>
 								</ul>
 							</div>
@@ -332,7 +331,7 @@
 					<li><a href="https://twitter.com/mscray9212" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://www.facebook.com/michael.scray.7" class="icon fa-facebook"><span class="label">Facebook</span></a>
 					<li><a href="https://github.com/mscray9212" class="icon fa-github"><span class="label">Github</span></a></li>
-					<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
+					<li><a href="mailto:mscray9212@gmail.com" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 				</ul>
 			</footer>
 
