Changed background and fonts

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-	<font color="lime">
+	<font color="blue">
 		<title>Michael Scray</title>
 		<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 		<meta name="description" content="" />
@@ -28,9 +28,9 @@
 		<!-- Header -->
 			<header id="header">
 				<a href="#" class="image avatar"><img src="images/MichaelScray.jpg" alt="" /></a>
-				<h1><strong>Michael Scray</strong><br />
-				<br><a href="mailto:mscray1@student.gsu.edu">mscray1@student.gsu.edu </a><br>
-				<br>(678)939-6486 <br/>
+				<h1><strong><right>Michael Scray</right></strong><br />
+				<br><a href="mailto:mscray1@student.gsu.edu"><right>mscray1@student.gsu.edu </right></a><br>
+				<br><right>(678)939-6486 </right><br/>
 				</h1>
 			</header>
 
@@ -42,9 +42,10 @@
 							<h2><font color="lime">Student at<br />
 							Georgia State University.</font></h2>
 						</header>
-						<font color="lime">
-						<p>Expected graduation date in Fall 2015.</p>
+						<font color="yellow">
+						<p>Expected graduation: Fall 2015.</p>
 						</font>
+						
 						<ul class="actions">
 							<li><a href="https://www.linkedin.com/pub/michael-scray/62/291/188" class="button">Learn More</a></li>
 						</ul>
@@ -53,17 +54,17 @@
 				<!-- Two -->
 					<section id="two">
 					<!-- Current log size is 1000 x 177!!!!! -->
-						<h2><font color="orange">Recent Work</font></h2>
+						<h2><b><font color="lime">Recent Projects</font></b></h2>
 						<div class="row">
 							<article class="6u 12u$(xsmall) work-item">
-								<a href="images/fulls/01.jpg" class="image fit thumb"><img src="images/SFlogo.jpg" alt="SkwiuFarms" /></a>
-								<h3><a href="http://www.ironduke.cs.gsu.edu/~scray/index.html"> <font color="yellow">SkwiuFarms</font></a></h3>
-								<p>A project for a non-profit farm.</p>
+								<a href="images/SFlogo.jpg" class="image fit thumb"><img src="images/SFlogo.jpg" alt="SkwiuFarms" /></a>
+								<h3><a href="./SkwiuFarms.html"> <font color="yellow">SkwiuFarms</font></a></h3>
+								<p><font color="aqua">A project for a non-profit farm.</font></p>
 							</article>
 							<article class="6u$ 12u$(xsmall) work-item">
-								<a href="images/fulls/02.jpg" class="image fit thumb"><img src="images/CZlogo.png" alt="CollegiateZone" /></a>
+								<a href="images/CZlogo.png" class="image fit thumb"><img src="images/CZlogo.png" alt="CollegiateZone" /></a>
 								<h3><a href="http://www.collegiatezone.org"> <font color="yellow">CollegiateZone</font></a></h3>
-								<p>A site for students, by students.</p>
+								<p><font color="aqua">A site for students, by students.</font></p>
 							</article>
 						</div>
 						<ul class="actions">
@@ -73,15 +74,16 @@
 
 				<!-- Three -->
 					<section id="three">
-						<h2><font color="orange">Get In Touch</font></h2>
-						<p>If you would like to know more than what is listed, please feel free to contact me!</p>
+						<h2><font color="lime">Get In Touch</font></h2>
+						<p><font color="yellow">If you would like to know more than what is listed, please feel free to contact me!</font></p>
 						<div class="row">
 							<div class="8u 12u$(small)">
 								<form method="post" action="#">
 									<div class="row uniform 50%">
 										<div class="6u 12u$(xsmall)"><input type="text" name="name" id="name" placeholder="Name" /></div>
 										<div class="6u$ 12u$(xsmall)"><input type="email" name="email" id="email" placeholder="Email" /></div>
-										<div class="12u$"><textarea name="message" id="message" placeholder="Message" rows="4"></textarea></div>
+										<div class="12u$"><textarea name="message" id="message" 
+										placeholder="Please notify that your message is being sent from my homepage!" rows="4"></textarea></div>
 									</div>
 								</form>
 								<ul class="actions">
@@ -92,17 +94,24 @@
 								<ul class="labeled-icons">
 									<li>
 										<h3 class="icon fa-home"><span class="label">Address</span></h3>
+										<font color="aqua">
 										3492 Highway 5<br />
 										Douglasville, Ga.<br />
 										United States
+										</font>
 									</li>
 									<li>
 										<h3 class="icon fa-mobile"><span class="label">Phone</span></h3>
+										<font color="aqua">
 										(678)939-6486
+										</font>
 									</li>
 									<li>
 										<h3 class="icon fa-envelope-o"><span class="label">Email</span></h3>
-										<a href="mailto:mscray9212@gmail.com">mscray9212@gmail.com</a>
+										<a href="mailto:mscray9212@gmail.com">
+										<font color="aqua">
+										mscray9212@gmail.com</a>
+										</font>
 									</li>
 								</ul>
 							</div>
